# gamengine-template

./: .gitignore  CMakeLists.txt
game/: CMakeLists.txt  imgui.ini
game/assets/shaders/: basic.glsl
game/src/: game_application.cpp  game_application.h  main.cpp
game/src/osu/: beatmap.cpp  beatmap.h  beatmap_parser.cpp  beatmap_parser.h  gameplay_clock.cpp  gameplay_clock.h  osu_game.cpp  osu_game.h  osu_renderer.cpp  osu_renderer.h  osz_loader.cpp  osz_loader.h
game/src/scripts/: player_controller.cpp  player_controller.h  script_exports.cpp  script_exports.h
